tests/negative/regex/range_error_max/input.ci
void main() {
    RegExp re = regexCompile("\d+", "");
    RegExpMatch[] ms = regexFindAll(re, "123", 0, -2);
    print(toString(count(ms)) + "\n");
}
